--- a/index.html
+++ b/index.html
@@ -2,36 +2,41 @@
 <table>
 <thead>
 <tr>
-<th style="text-align:center"><strong>Type</strong></th>
-<th style="text-align:center"><strong>Description [Link]</strong></th>
-<th style="text-align:center"><strong>Category</strong></th>
-<th style="text-align:center"><strong>Derivation</strong></th>
+<th style="text-align:left"><strong>Label</strong></th>
+<th style="text-align:left"><strong>Category</strong></th>
+<th style="text-align:left"><strong>Description</strong></th>
+<th style="text-align:left"><strong>[Direct - Link]</strong></th>
+<th style="text-align:left">**[Derivation - Link]</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:center">Router</td>
-<td style="text-align:center"><a href="http://192.168.0.1/0.1/gui/#/wifi/2.4GHz/priv/basic">192.168.0.1</a></td>
-<td style="text-align:center">Shortcut</td>
-<td style="text-align:center"></td>
+<td style="text-align:left">:--------</td>
+<td style="text-align:left">Shortcut</td>
+<td style="text-align:left">Router</td>
+<td style="text-align:left"><a href="http://192.168.0.1/0.1/gui/#/wifi/2.4GHz/priv/basic">192.168.0.1</a></td>
+<td style="text-align:left"></td>
 </tr>
 <tr>
-<td style="text-align:center">GitHub</td>
-<td style="text-align:center"><a href="http://github.com/">GitHub</a></td>
-<td style="text-align:center">Shortcut</td>
-<td style="text-align:center"></td>
+<td style="text-align:left">:--------</td>
+<td style="text-align:left">Shortcut</td>
+<td style="text-align:left">GitHub Profile</td>
+<td style="text-align:left"><a href="https://github.com/homerofgods">Homerofgods</a></td>
+<td style="text-align:left"><a href="http://github.com/">GitHub</a></td>
 </tr>
 <tr>
-<td style="text-align:center">Google</td>
-<td style="text-align:center"><a href="https://drive.google.com/drive/my-drive">My Drive</a></td>
-<td style="text-align:center">Shortcut</td>
-<td style="text-align:center"><a href="https://drive.google.com/">https://drive.google.com/</a></td>
+<td style="text-align:left">:--------</td>
+<td style="text-align:left">Shortcut</td>
+<td style="text-align:left">Google Drive</td>
+<td style="text-align:left"><a href="https://drive.google.com/drive/my-drive">My Drive</a></td>
+<td style="text-align:left"><a href="https://drive.google.com/">Google Drive</a></td>
 </tr>
 <tr>
-<td style="text-align:center">GitHub Pages</td>
-<td style="text-align:center"><a href="https://www.kristasimmons.io/blog/custom-email-domain-github-pages/">Custom Email Domain</a></td>
-<td style="text-align:center">To-do</td>
-<td style="text-align:center"><a href="https://www.kristasimmons.io/">https://www.kristasimmons.io/</a></td>
+<td style="text-align:left">:--------</td>
+<td style="text-align:left">To-do</td>
+<td style="text-align:left">GitHub Pages</td>
+<td style="text-align:left"><a href="https://www.kristasimmons.io/blog/custom-email-domain-github-pages/">Custom Email Domain</a></td>
+<td style="text-align:left"><a href="https://www.kristasimmons.io/">Kristasimmons</a></td>
 </tr>
 </tbody>
 </table>
