--- a/index.html
+++ b/index.html
@@ -1,42 +1,7 @@
-<h1 id="bookmarks">Bookmarks</h1>
-<table>
-<thead>
-<tr>
-<th style="text-align:left"><strong>Label</strong></th>
-<th style="text-align:left"><strong>Category</strong></th>
-<th style="text-align:left"><strong>Description</strong></th>
-<th style="text-align:left"><strong>URL</strong></th>
-<th style="text-align:left"><strong>Root URL</strong></th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">-</td>
-<td style="text-align:left">Shortcut</td>
-<td style="text-align:left">Router</td>
-<td style="text-align:left"><a href="http://192.168.0.1/0.1/gui/#/wifi/2.4GHz/priv/basic">192.168.0.1</a></td>
-<td style="text-align:left"></td>
-</tr>
-<tr>
-<td style="text-align:left">-</td>
-<td style="text-align:left">Shortcut</td>
-<td style="text-align:left">GitHub Profile</td>
-<td style="text-align:left"><a href="https://github.com/homerofgods">Homerofgods</a></td>
-<td style="text-align:left"><a href="http://github.com/">GitHub</a></td>
-</tr>
-<tr>
-<td style="text-align:left">-</td>
-<td style="text-align:left">Shortcut</td>
-<td style="text-align:left">Google Drive</td>
-<td style="text-align:left"><a href="https://drive.google.com/drive/my-drive">My Drive</a></td>
-<td style="text-align:left"><a href="https://drive.google.com/">Google Drive</a></td>
-</tr>
-<tr>
-<td style="text-align:left">-</td>
-<td style="text-align:left">To-do</td>
-<td style="text-align:left">GitHub Pages</td>
-<td style="text-align:left"><a href="https://www.kristasimmons.io/blog/custom-email-domain-github-pages/">Custom Email Domain</a></td>
-<td style="text-align:left"><a href="https://www.kristasimmons.io/">Kristasimmons</a></td>
-</tr>
-</tbody>
-</table>
+# Bookmarks 
+| **Label** | **Category** | **Description** | **URL** | **Root URL** |
+| :-------- | :-------- | :-------- | :-------- | :-------- | 
+| - | Shortcut | Router | [192.168.0.1](http://192.168.0.1/0.1/gui/#/wifi/2.4GHz/priv/basic) |  |
+| - | Shortcut | GitHub Profile | [Homerofgods](https://github.com/homerofgods) | [GitHub](http://github.com/) | 
+| - | Shortcut | Google Drive | [My Drive](https://drive.google.com/drive/my-drive) | [Google Drive](https://drive.google.com/) |
+| - | To-do | GitHub Pages | [Custom Email Domain](https://www.kristasimmons.io/blog/custom-email-domain-github-pages/) | [Kristasimmons](https://www.kristasimmons.io/) | 
