--- a/index.html
+++ b/index.html
@@ -5,3 +5,5 @@
 | - | Shortcut | GitHub Profile | [Homerofgods](https://github.com/homerofgods) | [GitHub](http://github.com/) | 
 | - | Shortcut | Google Drive | [My Drive](https://drive.google.com/drive/my-drive) | [Google Drive](https://drive.google.com/) |
 | - | To-do | GitHub Pages | [Custom Email Domain](https://www.kristasimmons.io/blog/custom-email-domain-github-pages/) | [Kristasimmons](https://www.kristasimmons.io/) | 
+| - | To-do | Stripe on GitHub | [Stripe checkout]](https://medium.com/@mericsson/stripe-and-github-pages-b731c5f6e5ee) | [medium](https://medium.com/) 
+| - | 
